# VKAdmin

./: .dockerignore  .env-non-dev  .gitignore  accounts_data.xlsx  data.json  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  dockerfile  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: config.py  database.py  exceptions.py  main.py  stats.json
app/auth/: dao.py  exceptions.py  model.py  models.py  router.py  schema.py  users.py
app/dao/: dao.py
app/excel_to_db/: dao.py  funcs.py  router.py  schemas.py  types.py
app/migrations/: env.py
app/migrations/versions/: 1711dc0829f8_added_users_table.py  1bc0e9faf5ba_changed_statistic_foreign_key_to_.py  1e0427812221_changed_statistic_type_to_list_to_.py  1e7ea252a79b_added_average_week_fulfillment_.py  2916a6749cce_fixed_relationships_back_populates.py  325544d3fe2b_deleted_subscribes_likes_and_comments_.py  36f377b91807_added_sphere_to_users.py  386ed5e14e1e_added_column_connected_to_organizations.py  43b852ea56c1_changed_tables_relationships.py  48c1b33c5a71_added_tables.py  4c1278cdfb6b_added_average_fulfillment_percentage_.py  51718662e906_added_total_column.py  57c340c6cc72_added_optional_column_connected_to_.py  5b8401b58f48_added_average_fulfillment_percentage_.py  6523a0a9e606_added_average_fulfillment_percentage_.py  676824d1e40d_changed_date_added_type_to_date_in_.py  6d2870489640_added_optional_shere_to_users.py  6f02798e6810_added_index_for_column_name_in_.py  7e1348618ca0_relationships_update.py  7f8d8f4fd2b3_tables_update.py  83075d40d575_changed_channel_idtype_to_int.py  84368fc5ee6f_added_default_params_to_date_added_.py  8ce84ffd3784_returned_unique_param.py  (+12 more)
app/organizations/: constants.py  dao.py  exceptions.py  funcs.py  models.py  params.py  router.py  schema.py  schemas.py  service.py  types.py
app/prepare_db/: router.py
app/statistic/: dao.py  funcs.py  models.py  router.py  schemas.py
app/tasks/: vk_stat.py
app/templates/: README.md  package-lock.json  package.json  tailwind.config.cjs
app/tests/: accounts.json  conftest.py  organizations.json  statistic.json  stats.json  users.json
app/vk/: dao.py  funcs.py  models.py  router.py  schemas.py  types.py
templates/: .gitignore  dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
templates/src/: main.js  style.css
(+50 files in other folders)
