[tool.poetry]
name = "vkadmin"
version = "0.1.0"
description = ""
authors = ["ScrollDude"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
gunicorn = "^21.2.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
fastapi-cli = "^0.0.2"
redis = "^5.0.4"
httpx = {extras = ["http2"], version = "^0.27.0"}
mypy = "^1.10.0"
ruff = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
