[tool.poetry]
name = "vkadmin"
version = "0.1.0"
description = ""
authors = ["ScrollDude"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
pandas = "^2.2.2"
rich = "^13.7.1"
alembic = "^1.13.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
redis = "^5.0.4"
aioredis = "^2.0.1"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
openpyxl = "^3.1.3"
ruff = "^0.4.7"
mypy = "^1.10.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
fake-useragent = "^1.5.1"
taskiq = "^0.11.4"
taskiq-redis = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
